syntax = "proto3";

package app.improving.membercontext.member;

import "app/improving/member/api/member_api.proto";
import "common_api.proto";
import "google/api/annotations.proto";
import "kalix/annotations.proto";

message ApiMemberIds {
    repeated ApiMemberId member_ids = 1;
}

service MemberActionService {
    option (kalix.codegen) = {
        action: {}
    };

    rpc RegisterMemberList(ApiRegisterMemberList) returns (ApiMemberIds) {
        option (google.api.http) = {
            post: "/member/register-memberlist"
            body: "*"
        };
    }

}
